--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -38,16 +38,28 @@ jobs:
             echo "No Dockerfile found, skipping image scan."
           fi
           
-      - name: Fail job if Trivy found vulnerabilities
+      - name: Fail job if Trivy found HIGH/CRITICAL vulnerabilities
         run: |
-          FS_COUNT=$(jq '[.Results[]? | select(.Vulnerabilities != null) | .Vulnerabilities[]?] | length' trivy-fs.json)
-          IMG_COUNT=0
-          if [ -f trivy-image.json ]; then
-            IMG_COUNT=$(jq '[.Results[]? | select(.Vulnerabilities != null) | .Vulnerabilities[]?] | length' trivy-image.json)
+          FS_HIGH=0
+          IMG_HIGH=0
+      
+          if [ -f trivy-fs.json ]; then
+            FS_HIGH=$(jq '[.Results[]? | .Vulnerabilities[]? | select(.Severity=="HIGH" or .Severity=="CRITICAL")] | length' trivy-fs.json)
           fi
-          TOTAL=$(($FS_COUNT + $IMG_COUNT))
-          echo "Trivy found $TOTAL vulnerabilities"
-          if [ "$TOTAL" -gt 0 ]; then
+      
+          if [ -f trivy-image.json ]; then
+            IMG_HIGH=$(jq '[.Results[]? | .Vulnerabilities[]? | select(.Severity=="HIGH" or .Severity=="CRITICAL")] | length' trivy-image.json)
+          fi
+      
+          TOTAL_HIGH=$((FS_HIGH + IMG_HIGH))
+      
+          echo "Trivy HIGH/CRITICAL count:"
+          echo "  - Filesystem: $FS_HIGH"
+          echo "  - Image: $IMG_HIGH"
+          echo "  - Total HIGH/CRITICAL: $TOTAL_HIGH"
+      
+          if [ "$TOTAL_HIGH" -gt 0 ]; then
+            echo "::error::Trivy found HIGH or CRITICAL vulnerabilities."
             exit 1
           fi
 
